NHSO-8523: updated app target to 29 and ran the migration to android x